--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,4 +12,4 @@ jobs:
           curl -X POST https://api.github.com/repos/hexsorcerer/gh-pages-playbook/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.DISPATCH_TOKEN }} \
-          --data '{"event_type": "component-update", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }
+          --data '{"event_type": "component-update", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }'
