ci: use repository-workflow action instead of curl
Previously was using a curl command, but had an issue with
authentication. Trying this published action instead.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,9 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Request playbook publish action
-      run: |
-          curl -X POST https://api.github.com/repos/hexsorcerer/gh-pages-playbook/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.DISPATCH_TOKEN }} \
-          --data '{"event_type": "component-update", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }'
+    - name: Dispatch component-update event
+      uses: peter-evans/repository-dispatch@v2
+      with:
+        token: ${{ secrets.DISPATCH_TOKEN }}
+        repository: hexsorcerer/gh-pages-playbook
+        event-type: component-update
