--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,11 @@ jobs:
         npm ci
         npx semantic-release
 
-  build:
+  dispatch:
 
     runs-on: ubuntu-latest
     needs: release
-    
+
     steps:
     - name: Dispatch component-update event
       uses: peter-evans/repository-dispatch@v2
